added vector3 and intersection functions

--- a/myapp.vcxproj.filters
+++ b/myapp.vcxproj.filters
@@ -4,7 +4,11 @@
     <ClCompile Include="template\template.cpp">
       <Filter>template</Filter>
     </ClCompile>
-    <ClCompile Include="myapp.cpp" />
+    <ClCompile Include="MyApp.cpp" />
+    <ClCompile Include="Plane.cpp" />
+    <ClCompile Include="Vector.cpp" />
+    <ClCompile Include="Ray.cpp" />
+    <ClCompile Include="Sphere.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="template\common.h">
@@ -13,10 +17,15 @@
     <ClInclude Include="template\precomp.h">
       <Filter>template</Filter>
     </ClInclude>
-    <ClInclude Include="myapp.h" />
+    <ClInclude Include="MyApp.h" />
     <ClInclude Include="cl\tools.cl">
       <Filter>template\cl</Filter>
     </ClInclude>
+    <ClInclude Include="Plane.h" />
+    <ClInclude Include="PrimitiveGeometry.h" />
+    <ClInclude Include="Vector.h" />
+    <ClInclude Include="Ray.h" />
+    <ClInclude Include="Sphere.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="template\LICENSE">
