added additional logging

--- a/myapp.vcxproj.filters
+++ b/myapp.vcxproj.filters
@@ -8,6 +8,7 @@
     <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Ray.cpp" />
     <ClCompile Include="Sphere.cpp" />
+    <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="template\common.h">
@@ -24,6 +25,7 @@
     <ClInclude Include="PrimitiveGeometry.h" />
     <ClInclude Include="Ray.h" />
     <ClInclude Include="Sphere.h" />
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="template\LICENSE">
