first scene is rendered

--- a/myapp.vcxproj.filters
+++ b/myapp.vcxproj.filters
@@ -10,6 +10,7 @@
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="Utils.cpp" />
     <ClCompile Include="Materials.cpp" />
+    <ClCompile Include="PrimitiveGeometry.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="template\common.h">
