--- a/myapp.vcxproj.filters
+++ b/myapp.vcxproj.filters
@@ -46,6 +46,12 @@
       <Filter>geometry</Filter>
     </ClCompile>
     <ClCompile Include="RayHelper.cpp" />
+    <ClCompile Include="SpotLight.cpp">
+      <Filter>lights</Filter>
+    </ClCompile>
+    <ClCompile Include="DirectionalLight.cpp">
+      <Filter>lights</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="template\common.h">
@@ -105,6 +111,12 @@
       <Filter>geometry</Filter>
     </ClInclude>
     <ClInclude Include="RayHelper.h" />
+    <ClInclude Include="SpotLight.h">
+      <Filter>lights</Filter>
+    </ClInclude>
+    <ClInclude Include="DirectionalLight.h">
+      <Filter>lights</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="template\LICENSE">
