--- a/myapp.vcxproj.filters
+++ b/myapp.vcxproj.filters
@@ -58,6 +58,7 @@
     <ClCompile Include="AABB.cpp">
       <Filter>geometry</Filter>
     </ClCompile>
+    <ClCompile Include="SceneBuilders.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="template\common.h">
@@ -129,6 +130,7 @@
     <ClInclude Include="AABB.h">
       <Filter>geometry</Filter>
     </ClInclude>
+    <ClInclude Include="SceneBuilders.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="template\LICENSE">
