--- a/myapp.vcxproj.filters
+++ b/myapp.vcxproj.filters
@@ -36,10 +36,13 @@
     <ClCompile Include="BVH.cpp">
       <Filter>geometry</Filter>
     </ClCompile>
+    <ClCompile Include="SceneBuilders.cpp" />
     <ClCompile Include="AABB.cpp">
       <Filter>geometry</Filter>
     </ClCompile>
-    <ClCompile Include="SceneBuilders.cpp" />
+    <ClCompile Include="BVHNode.cpp">
+      <Filter>geometry</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="template\common.h">
@@ -89,10 +92,13 @@
     <ClInclude Include="BVH.h">
       <Filter>geometry</Filter>
     </ClInclude>
+    <ClInclude Include="SceneBuilders.h" />
     <ClInclude Include="AABB.h">
       <Filter>geometry</Filter>
     </ClInclude>
-    <ClInclude Include="SceneBuilders.h" />
+    <ClInclude Include="BVHNode.h">
+      <Filter>geometry</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="template\LICENSE">
