--- a/myapp.vcxproj.filters
+++ b/myapp.vcxproj.filters
@@ -125,6 +125,9 @@
     <None Include="common.cl">
       <Filter>cl</Filter>
     </None>
+    <None Include="bilateral_filter.cl">
+      <Filter>cl</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="template">
